DP-10447: reposition media credit to fix overflow on homepage

--- a/assets/scss/03-organisms/_search-banner.scss
+++ b/assets/scss/03-organisms/_search-banner.scss
@@ -2,9 +2,11 @@
   background-position: center center;
   background-size: cover;
   display: flex;
-    align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   font-size: 0;
-  padding: 30px 0 95px;
+  padding: 30px 0;
 
   @media ($bp-small-min) {
     height: 1px; // IE11 hack to vertially align content with min-height
@@ -32,6 +34,7 @@
 
   &__container {
     @include ma-container;
+    padding-bottom: 90px;
     font-size: 1.375rem;
     position: relative;
     z-index: 2;
@@ -194,20 +197,21 @@
 
   .ma__banner-credit {
     @include ma-container;
-    position: absolute;
-      bottom: 20px;
-      left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
+    // position: absolute;
+    // bottom: 20px;
+    // left: 50%;
+    // transform: translateX(-50%);
+    // width: 100%;
     z-index: 3;
+    width: 100%;
   }
 
   // Start backward compatible with v5.7 - converted image-credit to new Banner Credit molecule
   &__image-credit {
     @include ma-container;
     position: absolute;
-      bottom: 20px;
-      left: 50%;
+    bottom: 20px;
+    left: 50%;
     transform: translateX(-50%);
     width: 100%;
     z-index: 3;
